Initial Object store changes. Still need to cleanup.